--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,23 @@
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="_0">0</string>
+    <string name="ac">AC</string>
+    <string name="_7">7</string>
+    <string name="_4">4</string>
+    <string name="_1">1</string>
+    <string name="_Percent">%</string>
+    <string name="_8">8</string>
+    <string name="_5">5</string>
+    <string name="_2">2</string>
+    <string name="_Dot">.</string>
+    <string name="_Divide">/</string>
+    <string name="_9">9</string>
+    <string name="_6">6</string>
+    <string name="_3">3</string>
+    <string name="_Backspace">⬅</string>
+    <string name="_Multiple">×</string>
+    <string name="_Minus">-</string>
+    <string name="_Plus">+</string>
+    <string name="_Equal">=</string>
 </resources>
