Cooking mode animation added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="_Plus">+</string>
     <string name="_Equal">=</string>
     <string name="themes">COOKING MODE</string>
+    <string name="cooking_mode">COOKING MODE</string>
 </resources>
