--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,28 @@
     <string name="_Equal">=</string>
     <string name="themes">COOKING MODE</string>
     <string name="cooking_mode">COOKING MODE</string>
+    <string name="mainview">mainView</string>
+    <string name="evaluation_line">evaluation line</string>
+    <string name="result_line">result line</string>
+    <string name="reset_button">reset button</string>
+    <string name="button_equql">button equql</string>
+    <string name="button_plus">button plus</string>
+    <string name="button_minus">button minus</string>
+    <string name="button_multiply">button multiply</string>
+    <string name="button_backspace">button backspace</string>
+    <string name="button_3">button #3</string>
+    <string name="button_6">button #6</string>
+    <string name="button_9">button #9</string>
+    <string name="button_division">button division</string>
+    <string name="button_dot">button dot</string>
+    <string name="button_2">button #2</string>
+    <string name="button_5">button #5</string>
+    <string name="button_8">button #8</string>
+    <string name="button_percentage">button percentage</string>
+    <string name="button_0">button #0</string>
+    <string name="button_4">button #4</string>
+    <string name="button_7">button #7</string>
+    <string name="button_equal">button equal</string>
+    <string name="switcher_between_fragments">switcher between fragments</string>
+    <string name="layout_selector">Layout selector</string>
 </resources>
