- fix for crash - release candidate 1.1.6 - increased in size the layout selector in height

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Popcorn calculator</string>
+    <string name="app_name">Funny Popcorn Calculator</string>
     <string name="delete">\u1f838</string>
     <string name="action_settings">Themes</string>
     <string name="settings">INGREDIENTS</string>
